Fixed navbar bug in which mobile mode has overlapping elements when menu is open

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -85,6 +85,10 @@ nav .logo.space{
 }        
 
 /*STYLE*/
+.header-nav {
+  z-index: 100;
+}
+
 nav .nav-items{
   display: flex;
   flex: 1;
